--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,5 +21,5 @@ RUN chmod +x /entrypoint.sh
 
 EXPOSE 8000
 
+# ТОЛЬКО entrypoint - CMD не нужен
 ENTRYPOINT ["/entrypoint.sh"]
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
